--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
         #carus{
             width:50%;
             height:50%;
-
+            object-fit:contain
         }
 
         #sss{
@@ -50,7 +50,7 @@
 
             </div>
             <div class="col-2">
-                <a asp-controller="UserPanel" asp-action="Index" class="col-2">Личный кабинет</a>
+                <a class="col-2"><partial name="_LoginPartial.cshtml" /></a>
             </div>
         </div>
     </div>
@@ -112,72 +112,66 @@
             </div>
 
         </div>
-        <table border="1">
-                        <tr>
-						<td>
-							13
-                            </td>
-                            <td >
-                             
+       
+       
+            <div class="container-fluid" id="sss">
+                <div class="row">
+                    <div class="col-4" id="carus">
+                        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-indicators">
+                                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                                 
 
-                            </td>
-                            <td>
-                                15
-                            </td>
-                    </table>
-        <div class="container-fluid" id="sss">
-            <div class="row">
-                <div class="col-4" id="carus">
-                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            </div>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="@ViewBag.Car.Preview" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-none d-md-block">
+                                    <a href="~/Home/Car/@ViewBag.Car.Id"> <h5>@ViewBag.Car.Mark @ViewBag.Car.Model</h5></a>
+                                        
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
 
-                        </div>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="https://sovetskaya-adygeya.ru/wp-content/uploads/2023/02/vnimanie-budte-ostorozhny-na-territorii-regiona-prognoziruyutsya-silnye-poryvy-vetra_1676971440769078311__2000x2000.jpg" class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>First slide label</h5>
-                                    <p>Some representative placeholder content for the first slide.</p>
+                                    <img src="@ViewBag.Car1.Preview" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-none d-md-block">
+                                    <a href="~/Home/Car/@ViewBag.Car1.Id"> <h5>@ViewBag.Car1.Mark  @ViewBag.Car1.Model</h5></a>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img src="https://sovetskaya-adygeya.ru/wp-content/uploads/2023/02/vnimanie-budte-ostorozhny-na-territorii-regiona-prognoziruyutsya-silnye-poryvy-vetra_1676971440769078311__2000x2000.jpg" class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Second slide label</h5>
-                                    <p>Some representative placeholder content for the second slide.</p>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img src="https://sovetskaya-adygeya.ru/wp-content/uploads/2023/02/vnimanie-budte-ostorozhny-na-territorii-regiona-prognoziruyutsya-silnye-poryvy-vetra_1676971440769078311__2000x2000.jpg" class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Third slide label</h5>
-                                    <p>Some representative placeholder content for the third slide.</p>
-                                </div>
+                                    
+
+                                    
+                               @* </div>
+                                @*<div class="carousel-item">
+                                    <img src="@car.Preview" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5>Third slide label</h5>
+                                        <p>Some representative placeholder content for the third slide.</p>
+                                    </div>*@
 
 
+                                
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
                             </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                            </button>
                         </div>
                     </div>
                 </div>
-                </div>
-                </div>
+            </div>
+
+        }
 
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-12" id="allCars">
-                            <a href="#">Все автомобили</a>
+                            <a href="~/Home/Cars">Все автомобили</a>
                         </div>
                     </div>
                 </div>
