--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
 
             </div>
             <div class="col-2">
-                <a asp-controller="UserPanel" asp-action="Index" class="col-2">Личный кабинет</a>
+                <a><partial name="_LoginPartial.cshtml" /></a>
             </div>
         </div>
     </div>
