--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -26,6 +26,39 @@
         #sss{
             height:20%;
         }
+        a{
+            font-size:18px;
+            font-family:"Bebas Neue";
+            font-weight:bold;
+         }
+
+        p {
+            font-family: "PT Sans";
+            font-size: 18px;
+            font-weight: normal;
+            padding: 10px;
+          }
+
+
+          #newstitle{
+            font-size: 20px;
+            font-family: "Bebas Neue";
+            font-weight: bold;
+
+          }
+
+
+        #newstitle p {
+            font-size: 20px;
+            font-family: "Bebas Neue";
+            font-weight: bold;
+        }
+
+        #modeltitle p{
+            font-size: 20px;
+            font-family: "Bebas Neue";
+            font-weight: bold;
+        }
     </style>
     <div class="container-fluid">
         <div class="row" id="heads">
