--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,7 +9,22 @@
     <link rel="stylesheet" href="~/css/reset.css">
     <title>Document</title>
 </head>
+
 <body>
+    <style>
+        a {
+            font-size: 18px;
+            font-family: "Bebas Neue";
+            font-weight: bold;
+        }
+
+        p {
+            font-family: "PT Sans";
+            font-size: 18px;
+            font-weight: normal;
+            padding: 10px;
+        }
+    </style>
     <div class="container-fluid">
         <div class="row" id="heads">
             <div class="col-2">
