--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -208,3 +208,15 @@ footer {
     padding: 2%;
 }
 
+
+a{
+    font-size:18px;
+    font-family:"Bebas Neue";
+    font-weight:bold;
+}
+
+p {
+    font-family: "PT Sans" font-size:18px;
+    font-weight: normal;
+    padding: 10px;
+}
