--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -102,28 +102,51 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-6" id="news">
-                        @*@foreach (var article in ViewBag.Article)
-                        {*@
-                <img src="@ViewBag.Article.ImageLink" alt="no found" id="imagenew">
-                            <h2 id="titlenews">
-                    <a href="~/Home/Article/@ViewBag.Article.Id">@ViewBag.Article.Title</a>
-                            </h2>
-                        @*}*@
-                        
+            @if(ViewBag.Article!=null){
+                <div class="col-6" id="news">
+                            @*@foreach (var article in ViewBag.Article)
+                {*@
+                            @if (ViewBag.Article != null)
+                            {
+                        <img src="@ViewBag.Article.ImageLink" alt="no found" id="imagenew">
 
-            </div>
+                            }
+
+                            @if (ViewBag.Article != null)
+                            {
+                                <h2 id="titlenews">
+                                    <a href="~/Home/Article/@ViewBag.Article.Id">@ViewBag.Article.Title</a>
+                                </h2>
+                            }
+                            @*}*@
+
+
+                        </div>
+                    }
+                    else
+                    {
+                        <h2 id="titlenews">Статьи не найдены</h2>
+                    }
 
             <div class="col-3" id="news2">
                 <div class="container">
                     <div class="col-3" id="news3">
-                                @foreach (var article in ViewBag.Articles)
+                                @if (ViewBag.Articles != null)
                                 {
-                            <h4>
-                                <a href="~/Home/Article/@article.Id">@article.Title</a>
-                            </h4>
-                            <br>
-                            <br>
+                                    @foreach (var article in ViewBag.Articles)
+                                    {
+                                <h4>
+                                    <a href="~/Home/Article/@article.Id">@article.Title</a>
+                                </h4>
+                                <br>
+                                <br>
+                                    }
+                                }
+                                else
+                                {
+                                    <h4>
+                                        Статьи не найдены
+                                    </h4>
                                 }
 
                     </div>
@@ -147,59 +170,65 @@
         </div>
        
        
-            <div class="container-fluid" id="sss">
-                <div class="row">
-                    <div class="col-4" id="carus">
-                        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                            <div class="carousel-indicators">
-                                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                                
+                        @if (ViewBag.Car != null)
+                        {
+                            <div class="container-fluid" id="sss">
+                                <div class="row">
+                                    <div class="col-4" id="carus">
+                                        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                                            <div class="carousel-indicators">
+                                                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
 
-                            </div>
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="@ViewBag.Car.Preview" class="d-block w-100" alt="...">
-                                    <div class="carousel-caption d-none d-md-block">
-                                    <a href="~/Home/Car/@ViewBag.Car.Id"> <h5>@ViewBag.Car.Mark @ViewBag.Car.Model</h5></a>
-                                        
+
+                                            </div>
+                                            <div class="carousel-inner">
+                                                <div class="carousel-item active">
+                                                    <img src="@ViewBag.Car.Preview" class="d-block w-100" alt="...">
+                                                    <div class="carousel-caption d-none d-md-block">
+                                                        <a href="~/Home/Car/@ViewBag.Car.Id"> <h5>@ViewBag.Car.Mark @ViewBag.Car.Model</h5></a>
+
+                                                    </div>
+                                                </div>
+                                                <div class="carousel-item">
+
+                                                    <img src="@ViewBag.Car1.Preview" class="d-block w-100" alt="...">
+                                                    <div class="carousel-caption d-none d-md-block">
+                                                        <a href="~/Home/Car/@ViewBag.Car1.Id"> <h5>@ViewBag.Car1.Mark  @ViewBag.Car1.Model</h5></a>
+                                                    </div>
+                                                </div>
+
+
+
+                                                @* </div>
+                                            @*<div class="carousel-item">
+                                            <img src="@car.Preview" class="d-block w-100" alt="...">
+                                            <div class="carousel-caption d-none d-md-block">
+                                            <h5>Third slide label</h5>
+                                            <p>Some representative placeholder content for the third slide.</p>
+                                            </div>*@
+
+
+
+                                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                                    <span class="visually-hidden">Previous</span>
+                                                </button>
+                                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                                    <span class="visually-hidden">Next</span>
+                                                </button>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="carousel-item">
-
-                                    <img src="@ViewBag.Car1.Preview" class="d-block w-100" alt="...">
-                                    <div class="carousel-caption d-none d-md-block">
-                                    <a href="~/Home/Car/@ViewBag.Car1.Id"> <h5>@ViewBag.Car1.Mark  @ViewBag.Car1.Model</h5></a>
-                                    </div>
-                                </div>
-                                    
-
-                                    
-                               @* </div>
-                                @*<div class="carousel-item">
-                                    <img src="@car.Preview" class="d-block w-100" alt="...">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <h5>Third slide label</h5>
-                                        <p>Some representative placeholder content for the third slide.</p>
-                                    </div>*@
-
-
-                                
-                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                    <span class="visually-hidden">Previous</span>
-                                </button>
-                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                    <span class="visually-hidden">Next</span>
-                                </button>
                             </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
-        }
+                        }
+
+
+         
+        
 
                 <div class="container-fluid">
                     <div class="row">
