--- a/Views/UserPanel/Autolizs.cshtml
+++ b/Views/UserPanel/Autolizs.cshtml
@@ -25,6 +25,10 @@
                     <p>Телефон:@user.Phone</p>
                 }
             @*}*@
+
+            <form action="~/UserPanel/DeleteCars/@ViewBag.Cars.Id">
+                <input type="submit" value="Удалить" />
+            </form>
         </div>
         <div class="bord"></div>
 
